# mal

./: Makefile  README.md  runtest.py
rust2/: Cargo.toml  Makefile  run
rust2/src/: ast.rs  core.rs  env.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs
