[package]
name = "rust2"
version = "0.1.0"
authors = ["theor"]
edition = "2018"

[dependencies]
rustyline = "1.0.0"
lazy_static = "*"
regex = "*"
itertools = "*"

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "src/step2_eval.rs"

[[bin]]
name = "step3_env"
path = "src/step3_env.rs"

[[bin]]
name = "step4_if_fn_do"
path = "src/step4_if_fn_do.rs"

[[bin]]
name = "step5_tco"
path = "src/step5_tco.rs"

[[bin]]
name = "step6_file"
path = "src/step6_file.rs"

[[bin]]
name = "step7_quote"
path = "src/step7_quote.rs"

[[bin]]
name = "step8_macros"
path = "src/step8_macros.rs"

[[bin]]
name = "step9_try"
path = "src/step9_try.rs"

[[bin]]
name = "stepA_mal"
path = "src/stepA_mal.rs"
